k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-library-deployment
  namespace: dev
  labels:
    app: movie-library
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-library
  template:
    metadata:
      labels:
        app: movie-library
    spec:
      containers:
      - name: movie-library-container
        imagePullPolicy: IfNotPresent
        image: movie-library:3.0
        ports:
        - containerPort: 3000
