k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-library-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: movie-library.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-library-service
            port:
              number: 80
